<?xml version="1.0"?>
<package>
  <name>opencv_colcon</name>
  <version>4.5.1</version>
  <description>OpenCV colcon wrapper </description>
  <maintainer email="paul.furgale@mavt.ethz.ch">Paul Furgale</maintainer>
  <author>Paul Furgale</author>
  <license>New BSD</license>

  <buildtool_depend>colcon</buildtool_depend>

</package>
